--- a/Seção 4 Fundamentos do Angular Binding, Diretivas, Templates e Decorators/modulo4/src/index.html
+++ b/Seção 4 Fundamentos do Angular Binding, Diretivas, Templates e Decorators/modulo4/src/index.html
@@ -5,9 +5,16 @@
   <title>Modulo4</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <div 
+  class="container"
+  id="container-id"
+  style="color: azure; background-color: blueviolet;"
+  onmouseover="alert('Evento disparado!!!')">Container</div>
+
+  <input class="meu-imput" id="meu-imput-id" type="text" value="Texto inicial-index"/>
+  <br>
   <app-root></app-root>
 </body>
 </html>
